--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=3341c0eb74191c7c609f45559ab48161
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:mnkctnob@127.0.0.1:3306/free_bank
+DATABASE_URL=mysql://admin:mnkctnob@127.0.0.1:3306/free_bank
 ###< doctrine/doctrine-bundle ###
