Added knp snappy bundle

--- a/.env
+++ b/.env
@@ -26,3 +26,8 @@ APP_SECRET=3341c0eb74191c7c609f45559ab48161
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:mnkctnob@127.0.0.1:3306/free_bank
 ###< doctrine/doctrine-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
